# repo-review-cli

./: .gitignore  CLAUDE.md  CONTEXT.md  DEVELOPER_NOTES.md  README.md  manifest.example.json  pyproject.toml
docs/adr/: 0001-sha-pinned-manifest-as-input.md  0002-tiered-check-model-v1-scope.md  0003-self-owned-checks-sonar-supplementary.md  0004-throwaway-one-time-tool.md  0005-python-cli.md  0006-findings-json-canonical-reports-are-projections.md  0007-v1-local-only-no-live-apis.md
examples/: manifest.example.json
repo_review/: __main__.py  acquire.py  advisories.py  checks.py  cli.py  finding.py  findings_file.py  manifest.py  reports.py  runner.py
repo_review/data/: advisories.json
tests/: conftest.py  test_acquire.py  test_advisories.py  test_assertion_free_tests_check.py  test_cli.py  test_dependency_cves_check.py  test_directory_density_nesting_check.py  test_disabled_tests_check.py  test_findings_file.py  test_god_class_check.py  test_large_file_check.py  test_layering_violation_check.py  test_manifest.py  test_react_dangerous_html_check.py  test_readme_check.py  test_reports.py  test_runner.py  test_secrets_check.py  test_snapshot_prerelease_deps_check.py  test_sonar_exclusions_check.py  test_sql_string_concat_check.py  test_suppression_density_check.py  test_tests_present_check.py  test_todo_check.py  test_unused_dependency_check.py
