[project]
name = "repo-review-cli"
version = "0.1.0"
description = "Throwaway pre-takeover code-review tool: runs self-computed checks across Subject Repos and emits severity-tagged findings."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["repo_review"]
